[tool.poetry]
name = "spylib"
version = "0.7.0"
description = "A library to facilitate interfacing with Shopify's API"
authors = ["Anthony Hillairet <ant@satel.ca>"]
maintainers = ["Anthony Hillairet <ant@satel.ca>", "Nathan Nesbitt <nathan@satel.ca>"]
license = "MIT"
readme = "README.md"
exclude = ["tests", "scripts"]
classifiers = [ "License :: OSI Approved :: MIT License",]
homepage = "https://satelcreative.github.io/spylib"
repository = "https://github.com/SatelCreative/spylib"

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">= 0.18.1"
tenacity = "^7.0.0"
starlette = ">= 0.15.0"
nest-asyncio = "^1.5.1"
pydantic ="^1.8.2"
PyJWT = "^2.1.0"
pycryptodome = "^3.10.1"

[tool.poetry.dev-dependencies]
blue = "0.9.0"
pytest = "6.2.4"
pytest-asyncio = "0.15.1"
pytest-cov = "2.12.1"
pytest-mock = "3.6.1"
mypy = "0.812"
mypy-extensions = "0.4.3"
flake8 = "3.9.2"
flake8-isort = "4.0.0"
python-box = "5.3.0"
requests = "2.25.1"
watchdog = "2.1.2"
PyYAML = "5.4.1"
argh = "0.26.2"
tox = "3.24.4"
mkdocs = "1.3.0"
mkdocs-awesome-pages-plugin = "v2.6.0"
mkdocs-material = "7.3.6"
lazydocs = "0.4.8"
pydocstyle = "6.1.1"
linkcheckmd= "1.4.0"
respx = "0.19.2"
mike = "1.1.2"

fastapi = { version = ">= 0.69.0", optional = true }

[tool.poetry.extras]
fastapi = ["fastapi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 99

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = "pydantic.mypy"
show_error_codes = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []
