[tool.poetry]
name = "spylib"
version = "0.10.5"
description = "A library to facilitate interfacing with Shopify's API"
authors = ["Anthony Hillairet <ant@satel.ca>"]
maintainers = ["Anthony Hillairet <ant@satel.ca>", "Lishan Luo <lishan@satel.ca>", "Frank Chung <frank@satel.ca>"]
license = "MIT"
readme = "README.md"
exclude = ["tests", "scripts"]
classifiers = [ "License :: OSI Approved :: MIT License",]
homepage = "https://satelcreative.github.io/spylib"
repository = "https://github.com/SatelCreative/spylib"

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">= 0.18.1 <= 0.24.1"
tenacity = "^8.2.2"
starlette = ">= 0.15.0"
pydantic = "^2.5.2"
PyJWT = "^2.1.0"
pycryptodome = "^3.10.1"

fastapi = { version = ">= 0.100.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
mypy = "^1.4.1"
mypy-extensions = "^1.0.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
python-box = "^7.0.1"
watchdog = "^3.0.0"
PyYAML = "^6.0.1"
argh = "^0.28.1"
tox = "^4.12.1"
mkdocs = "^1.4.3"
mkdocs-awesome-pages-plugin = "^v2.9.1"
mkdocs-material = "^9.1.18"
lazydocs = "^0.4.8"
pydocstyle = "^6.3.0"
respx = "^0.20.2"
mike = "^1.1.2"
pytest-asyncio = "^0.23.2"
setuptools = "^80.3.1"

[tool.poetry.extras]
fastapi = ["fastapi"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip_string_normalization = true

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = "pydantic.mypy"
show_error_codes = true
check_untyped_defs = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []
